# forsch-adk-workspace

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CURRENT-STATE.md  D5-WRITEUP.md  DIRECTORY.md  Dockerfile  GIT-DISCIPLINE.md  GRADUATION.md  HANDOFF-2026-06-26-agent-focus-zoom.md  Makefile  README.md  agent-graph-v2.json  bridge_config.yaml  build_live_graph.py  capabilities.json  cloudflare-worker.js  compose.yaml  compose.yaml.bak-pre-leadsdisable-1782182118  conftest.py  contract_check.py  home.html  index.html  promote_agent.py  pyproject.toml  release-please-config.json  repo_manifest.yaml  serve.py  spawn_agent.py
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: control-plane-review.yml  release-please.yml  verify.yml
_archived_agents/: hubert_soul.md
agent_specs/: DIRECTORY.md  agents.yaml
agents/: DIRECTORY.md
agents/shelby/: CHANGELOG.md  agent.py  pyproject.toml
agents/shelby/src/forsch/agent_shelby/: agent.py
bridge/: DIRECTORY.md  bridge_config.yaml  compose.yaml  compose.yaml.bak-pre-adkleads-1782169105  pyproject.toml
bridge/deploy/: CHAT-SURFACE-PHASE1.md  CHAT-SURFACE-VERIFICATION.md  make_agent_chat_page.py  seed-keys.py
bridge/src/forsch/adk_bridge/: a2a_delegation.py  audit_log.py  bridge.py  cat_persona.py  convo_mirror.py  curator_persona.py  curator_tools.py  discord_bot.py  discord_identity.py  discord_main.py  friend_memory.py  graph_manifest.py  http.py  knowledge_tools.py  native_bots.py  onboarding_tools.py  ops_a2a.py  ops_diagnostics.py  ops_persona.py  ops_tools.py  rate_limit.py  request_watcher.py  run.py  runtime.py  screening_room_tools.py
bridge/src/forsch/adk_bridge/gateway/: __init__.py  adapter.py  message.py  render.py  router.py
bridge/src/forsch/adk_bridge/knowledge/: onboarding-playbook.md  site-guide.md  sr1-announcement-template.md  stack.md  welcome-template.md
bridge/src/forsch/adk_bridge/teamrooms/: client.py  core.py  poller.py  router.py  wiring.py
bridge/tests/: conftest.py  test_credential_safety.py  test_curator_tools.py  test_http.py  test_persona_invariants.py  test_phase4_provisioning.py  test_phase5_notifications.py  test_phase7_security.py  test_phase8_lifecycle.py  test_runtime.py  test_spoiler_safety.py  test_stability_route.py  test_teamrooms_client.py  test_teamrooms_core.py  test_teamrooms_poller.py  test_teamrooms_router.py  test_token_bridge.py
bridge/tests/gateway/: test_crm_parity.py  test_message.py  test_router.py  test_run_streaming.py  test_thought_filter.py
builder/: DIRECTORY.md  STATUS.md  pyproject.toml
builder/deploy/: adk-cockpit.service  cockpit.bashrc  tailscale-serve-cockpit.sh
builder/src/forsch/adk_builder/: app.py  canvas_api.py  collector.py  editor.py  metadata.py  models.py  promote.py  renderer.py  terminal.py
builder/src/forsch_adk_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
builder/templates/: canvas.html  index.html  term.html
builder/tests/: test_app.py  test_app_token.py  test_collector.py  test_metadata.py  test_promote.py  test_renderer.py
chat/: conftest.py  pyproject.toml
cli/: pyproject.toml
cli/src/forsch/cli/: __init__.py  evals.py  goal.py  graph.py  main.py  operator.py  scaffold.py  skills.py  specialists.py  ui.py  workspace.py
cli/src/forsch/cli/goal_engine/: __init__.py  _json.py  actuators.py  engine.py  judge.py  ledger.py  planner.py  schema.py
cli/tests/: test_cli.py
data/: DIRECTORY.md  migrate_jsonl_to_sqlite.py  schema.sql  shelby_schema.sql
deploy/: DEPLOY-RUNBOOK.md  Dockerfile  REPO-SYNC.md  cli.json.example  docker-compose.yml  screeningroom-bots.service  screeningroom.env.example
docs/: ADK_DISCORD_TRACE_LOGGING.md  AGENT_FACTORY_SPEC.md  ARCHITECTURE.md  BUILDER_COCKPIT_GOAL.md  BUILD_LEAD_ADK_CAPABILITY_SPEC.md  DIRECTORY.md  DOCSTRING-BOT-GOAL.md  E2E-PROOF-HANDOFF.md  GOOGLE_DEV_KNOWLEDGE_MCP.md  HANDOFF-2026-06-21-shelby-household.md  HANDOFF-2026-06-28-reference-library-and-profile.md  HANDOFF-2026-06-29-adk-web-pivot.md  LEARNINGS.md  OPEN-QUESTIONS.md  RUNBOOK.md  STABILITY_ALERT_TRACKING.md  STABILITY_ARCHITECT_OVERNIGHT_GOAL.md  STABILITY_ARCHITECT_OVERNIGHT_WORKLOG.md  STABILITY_GOVERNOR_AGENT_DESIGN.md  STABILITY_GOVERNOR_RUNBOOK.md  VIBE-CODE-LOCALLY.md  adk-agent-building-blocks-visual.html  adk-discord-bridge-spike.md  adk-vocabulary-map.html  reusable-agent-cockpit.md
eval_sets/: shelby.evalset.json
factory/: DIRECTORY.md  pyproject.toml
factory/src/forsch/adk_factory/: __init__.py  bridge.py  bundles.py  cli.py  loader.py  models.py  renderer.py  tool_metadata.py  validation.py  validator.py
factory/templates/: agent.py.j2  root_agent.yaml.j2
factory/tests/: test_apply.py  test_bridge.py  test_bundles.py  test_cli_plan.py  test_deploy_gate.py  test_loader.py  test_no_tools.py  test_package.py  test_renderer.py  test_tool_metadata.py  test_validation.py  test_validator.py
graph/: agent-graph.json  build_agent_graph.py
preambles/: README.md  hubert-team-lead.md
scripts/: adk-web-local.py  check_bijection.py  check_structure.py  disable-stray-gateway.sh  forsch_palette.py  rebuild_venvs.sh  refresh_reference.sh  stability_audit.py
shared/: components.yaml  infra.yaml
skills/: building-an-agent.md  promoting-web-edits.md  running-a-goal.md  wiring-a-tool.md  writing-evals.md
tests/: test_agent.py  test_landmine_drift.py  test_landmine_fix.py  test_run.py  test_stability_audit_script.py  test_stability_route.py  test_store.py  test_teamrooms_wiring.py  test_trends.py
web_agents/: DIRECTORY.md
(+270 files in other folders)
