[project]
name = "forsch-adk-bridge"
version = "0.1.0"
description = "Discord bridge for ADK agents — one bot, five team leads"
requires-python = ">=3.10"
dependencies = [
    "forsch-agent-stability>=0.1.0",
    "forsch-agent-ops>=0.1.0",
    "forsch-agent-social>=0.1.0",
    "forsch-agent-brand>=0.1.0",
    "forsch-agent-website>=0.1.0",
    "forsch-agent-assistant>=0.1.0",
    "forsch-agent-build>=0.1.0",
    "forsch-adk-components>=0.1.0",
    "google-adk[extensions,a2a]>=2.3.0",
    "discord.py>=2.4",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forsch"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: opt-in checks that hit a live LLM/gateway (run with TEST_LIVE_LLM=1, skipped by default)",
]
