[project]
name = "forsch-adk-builder"
version = "0.1.0"
description = "Manifest editing + agent promotion library for the Forsch ADK workspace (forsch.adk_builder.editor / .promote). The cockpit UI was removed 2026-07-01."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
