[project]
name = "forsch-adk-factory"
version = "0.1.0"
description = "Deterministic generator: agents.yaml manifest -> ADK agent artifacts"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forsch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
