[project]
name = "forsch-agent-shelby"
version = "0.2.0"  # x-release-please-version
description = "Shelby agent - personal grocery, reminders, and receipt-email assistant"
requires-python = ">=3.10"
dependencies = [
    "forsch-adk-components==0.1.0",  # R-STRUCT-11: explicit == intra-dep pin (ships into the wheel)
    "google-adk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.uv.sources]
forsch-adk-components = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forsch"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
